--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -1,4 +1,4 @@
-<input class="pac-input controls position" places-auto-complete size=80
+<input id="search-box" class="pac-input controls position" places-auto-complete size=80
        ng-model="vm.address"
        component-restrictions="{country:'est'}"
        types="{{types}}"
