--- a/src/main/webapp/css/rate.css
+++ b/src/main/webapp/css/rate.css
@@ -31,3 +31,31 @@ body {
 height: 33%;
 }
 
+.add-location-pop-up {
+    left: 50%;
+    border: none;
+    -webkit-box-shadow: none;
+}
+
+/*------------RADIO BUTTON CSS----------------*/
+.radio-inline__input {
+    clip: rect(1px, 1px, 1px, 1px);
+    position: absolute !important;
+}
+
+.radio-inline__label {
+    display: inline-block;
+    padding: 0.5rem 2rem;
+    transition: all .2s;
+    color: #848484;
+    outline-color: #848484;
+    outline-style: solid;
+    outline-width: 1px;
+}
+
+.radio-inline__input:checked + .radio-inline__label {
+    background: #848484;
+    color: #FFFFFF;
+    text-shadow: 0 0 1px rgba(0,0,0,.7);
+}
+/*---------------RADIO BUTTON CSS END ---------------*/
