--- a/src/main/webapp/css/signup.css
+++ b/src/main/webapp/css/signup.css
@@ -160,7 +160,7 @@ textarea {
 	border: 0;
 	outline: none;
 	border-radius: 0;
-	padding: 15px 0;
+	padding: 15px 6px;
 	font-size: 2rem;
 	font-weight: 600;
 	text-transform: uppercase;
