Fix for popup typo

--- a/src/main/webapp/partials/home.html
+++ b/src/main/webapp/partials/home.html
@@ -20,7 +20,7 @@
                 <span ng-style="{ 'width': getStars(selectedLocation.rating) }"></span>
             </span>
                 </div>
-            <h4>Priced: {{selectedLocation.free}}</h4>
+            <h4>Free: {{selectedLocation.free}}</h4>
         </div>
 
 
